--- a/.github/workflows/helyas-autobuilder.yml
+++ b/.github/workflows/helyas-autobuilder.yml
@@ -297,7 +297,7 @@ jobs:
     - name: Archive logs and reports
       uses: actions/upload-artifact@v4
       with:
-        name: helyas-autobuilder-logs-${{ steps.read-tasks.outputs.TIMESTAMP }}
+        name: helyas-autobuilder-logs-${{ github.run_number }}
         path: |
           reports/
           logs/
