--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 flask==3.0.0
 gunicorn==21.2.0
 uvicorn==0.29.0
-openai==1.2.3
-anthropic==0.64.0
+openai>=1.40.0
+anthropic>=0.34.0
+google-generativeai>=0.7.2
+python-dotenv>=1.0.1
