--- a/railway.toml
+++ b/railway.toml
@@ -2,7 +2,7 @@
 builder = "NIXPACKS"
 
 [deploy]
-startCommand = "gunicorn -w 1 -k uvicorn.workers.UvicornWorker backend.synapse_brain:app --timeout 120 --graceful-timeout 30"
+startCommand = "gunicorn -w 1 backend.synapse_brain:app --timeout 120 --graceful-timeout 30"
 healthcheckPath = "/health"
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 3
